tests/snapshots/r#mod__ubrace.snap
---
source: tests/mod.rs
expression: snap
---
ubrace(1+2)

<math>
  <munder>
    <mrow>
      <mn>
        1
      </mn>
      <mo>
        +
      </mo>
      <mn>
        2
      </mn>
    </mrow>
    <mo>
      ⏟
    </mo>
  </munder>
</math>

